# ProjectQ

./: .codespell.allow  .coveragerc  .coveralls.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  .yamllint  =  @oscarg933  CHANGELOG.md  COPYING  Dockerfile  MANIFEST.in  NOTICE  README.rst  bernstein_vazirani_tutorial.ipynb  https-github.github.io  penmp  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  settings.json  setup.cfg  setup.py  test_azure_quantum.py
.github/workflows/: ci.yml  draft_release.yml  format.yml  publish_release.yml  pull_request.yml  pypi.yml
Http:/: Oscarg933.github.io
docs/: Makefile  README.rst  conf.py  examples.rst  index.rst  make.bat  package_description.py  projectq.backends.rst  projectq.cengines.rst  projectq.libs.math.rst  projectq.libs.revkit.rst  projectq.libs.rst  projectq.meta.rst  projectq.ops.rst  projectq.rst  projectq.setups.decompositions.rst  projectq.setups.ibm.rst  projectq.setups.rst  projectq.types.rst  tutorials.rst
examples/: README.rst  VQE.py  aqt.py  awsbraket.ipynb  azure-quantum.ipynb  bellpair_circuit.py  bernstein_vazirani_tutorial.ipynb  compiler_tutorial.ipynb  control_tester.py  gate_zoo.py  grover.py  hws4.py  hws6.py  ibm.py  ibm16.py  ibm_entangle.ipynb  ibmq_tutorial.ipynb  ionq.ipynb  ionq.py  ionq_bv.py  ionq_half_adder.py  mapper_tutorial.ipynb  matout_tester.py  phase_estimation.py  quantum adder.ipynb  quantum_adder.ipynb  quantum_random_numbers.py  quantum_random_numbers_ibm.py  quantum_teleportation.ipynb  settings.json  shor.py  simulator_tutorial.ipynb  spdecomp_tester.py  spectral_measurement.ipynb  teleport.py  teleport_circuit.py  unitary_simulator.py  variational_eigensolver.py  variational_quantum_eigensolver.ipynb  zoo.tex
projectq/: __init__.py  _version.py
projectq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projectq/backends/: __init__.py  _exceptions.py  _printer.py  _printer_test.py  _qasm.py  _qasm_test.py  _resource.py  _resource_test.py  _unitary.py  _unitary_test.py  _utils.py  _utils_test.py
projectq/backends/_aqt/: __init__.py  _aqt.py  _aqt_http_client.py  _aqt_http_client_test.py  _aqt_test.py
projectq/backends/_awsbraket/: __init__.py  __init___test.py  _awsbraket.py  _awsbraket_boto3_client.py  _awsbraket_boto3_client_test.py  _awsbraket_boto3_client_test_fixtures.py  _awsbraket_test.py  _awsbraket_test_fixtures.py
projectq/backends/_azure/: __init__.py  _azure_quantum.py  _azure_quantum_client.py  _azure_quantum_client_test.py  _azure_quantum_test.py  _exceptions.py  _util.py  _util_test.py  _utils.py  _utils_test.py
projectq/backends/_circuits/: __init__.py  _drawer.py  _drawer_matplotlib.py  _drawer_matplotlib_test.py  _drawer_test.py  _plot.py  _plot_test.py  _to_ascii.py  _to_ascii_test.py  _to_latex.py  _to_latex_test.py
projectq/backends/_ibm/: __init__.py  _ibm.py  _ibm_http_client.py  _ibm_http_client_test.py  _ibm_test.py
projectq/backends/_ionq/: __init__.py  _ionq.py  _ionq_exc.py  _ionq_http_client.py  _ionq_http_client_test.py  _ionq_mapper.py  _ionq_mapper_test.py  _ionq_test.py
projectq/backends/_qrack/: __init__.py  _qracksim.cpp  (+3 more)
projectq/cengines/: __init__.py  _basicmapper.py  _basicmapper_test.py  _basics.py  _basics_test.py  _cmdmodifier.py  _cmdmodifier_test.py  _command_list.py  _command_list_test.py  _dirtyqubit_test.py  _gate_manager.py  _gate_manager_test.py  _graph_path_container.py  _graph_path_container_test.py  _graph_path_manager.py  _graph_path_manager_test.py  _graphmapper.py  _graphmapper_test.py  _ibm5qubitmapper.py  _ibm5qubitmapper_test.py  _ibmcnotmapper.py  _ibmcnotmapper_test.py  _linearmapper.py  _linearmapper_test.py  _main.py  _main_test.py  _manualmapper.py  _manualmapper_test.py  _multi_qubit_gate_manager.py  _multi_qubit_gate_manager_test.py  _optimize.py  _optimize_test.py  _swapandcnotflipper.py  _swapandcnotflipper_test.py  _tagremover.py  _tagremover_test.py  _testengine.py  _testengine_test.py  _twodmapper.py  _twodmapper_test.py  (+1 more)
projectq/isometries/: __init__.py  apply_decompositions.py  binding.cpp  cppdec.cpp  decompose_diagonal.py  decompose_isometry.py  decompose_ucg.py  decomposition.cpp  decomposition.hpp  decompositions.py  single_qubit_gate.py  test.cpp
projectq/libs/: __init__.py  util_decomp.py
projectq/meta/: __init__.py  _compute.py  _compute_test.py  _control.py  _control_test.py  _dagger.py  _dagger_test.py  _dirtyqubit.py  _dirtyqubit_test.py  _exceptions.py  _logicalqubit.py  _logicalqubit_test.py  _loop.py  _loop_test.py  _qubitplacement.py  _qubitplacement_test.py  _util.py  _util_test.py
projectq/ops/: __init__.py  _basics.py  _basics_test.py  _command.py  _command_test.py  _diagonal_gate.py  _diagonal_gate_test.py  _gates.py  _gates_test.py  _isometry.py  _isometry_test.py  _metagates.py  _metagates_test.py  _phase_estimation.py  _phase_estimation_test.py  _qaagate.py  _qaagate_test.py  _qftgate.py  _qftgate_test.py  _qpegate.py  _qpegate_test.py  _qubit_operator.py  _qubit_operator_test.py  _relative_command.py  _relative_command_test.py  _shortcuts.py  _shortcuts_test.py  _state_prep.py  _state_prep_test.py  _time_evolution.py  _time_evolution_test.py  _uniformly_controlled_gate.py  _uniformly_controlled_gate_test.py  _uniformly_controlled_rotation.py  _uniformly_controlled_rotation_test.py
projectq/setups/: __init__.py  _utils.py  aqt.py  aqt_test.py  awsbraket.py  awsbraket_test.py  default.py  grid.py  grid_test.py  ibm.py  ibm16.py  ibm16_test.py  ibm_test.py  ionq.py  ionq_test.py  linear.py  linear_test.py  restrictedgateset.py  restrictedgateset_test.py  rigetti.py  rigetti_test.py  squaregrid.py  squaregrid_test.py  trapped_ion_decomposer.py  trapped_ion_decomposer_test.py
projectq/tags/: __init__.py  _dirtyqubit_test.py
projectq/tests/: __init__.py  _drawmpl_test.py  _factoring_test.py
projectq/types/: __init__.py  _qubit.py  _qubit_test.py
tutorials/: Basic_qp1.ipynb  Bernstein-Vazirani Algorithm.ipynb  Bernstein-Vazirani algorithm.tex
ส้อม Umbrellasystem404/ProjectQ/: README.rst
(+146 files in other folders)
