[options]

zip_safe = False
packages = find:
install_requires =
    matplotlib >= 2.2.3
    networkx >= 2
    numpy
    requests
    scipy

[options.extras_require]

azure-quantum = azure-quantum
braket = boto3
revkit =
     revkit == 3.0a2.dev2
     dormouse
test =
     flaky
     mock
     pytest >= 6.0
     pytest-cov
     pytest-mock

docs =
     sphinx
     sphinx_rtd_theme


# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable

# ==============================================================================
