[options]

zip_safe = False
packages = find:

# ==============================================================================

[flake8]

max-line-length = 120
ignore = E203,W503
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """
eradicate-whitelist = # yapf: disable# yapf: enable

# ==============================================================================
